# nimbus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: run-tests.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fsops.rs  http.rs  lib.rs  main.rs  models.rs  scripting.rs
src/components/: CollectionTree.test.tsx  CollectionTree.tsx  EnvironmentPanel.tsx  KeyValueEditor.tsx  MethodBadge.tsx  PromptModal.tsx  RequestBuilder.test.tsx  RequestBuilder.tsx  ResponseViewer.tsx  ScriptEditor.tsx  Sidebar.tsx  Tabs.tsx  components.test.tsx
src/lib/: bruFormat.test.ts  bruFormat.ts  importers.test.ts  importers.ts  store.test.ts  store.ts  tauriApi.test.ts  tauriApi.ts  types.ts
src/styles/: globals.css
