[package]
name = "nimbus"
version = "0.1.0"
description = "Nimbus - an open-source, file-based API client"
authors = ["you"]
edition = "2021"

[lib]
name = "nimbus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "cookies", "native-tls"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
rquickjs = { version = "0.5", features = ["array-buffer", "classes"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
